# PythonExercises

./: .pre-commit-config.yaml  GaussianNaiveBayesClassifier.py  dicesimulator.py  guess_the_number.py  knn_classification.py  logisticregression.py  mnist.py  pyproject.toml
Numpy/: boolarray.py  commonelementsinarray.py  customarraysequences.py  oddnumbersinarray.py  reshapearray.py  stackarrays.py
interviews/Annotation Conflict Report/: generate_annotations.py  report_generation.py
interviews/annotation_conflict_report/: README.md  generate_annotations.py  report_generation.py
interviews/dataset_manifest_validation/: README.md  generate_manifest_records.py  validate_manifest.py
